--- a/src/components/HomeScreen/HomeScreen.css
+++ b/src/components/HomeScreen/HomeScreen.css
@@ -1,4 +1,5 @@
 .container {
+  height: 100%;
 }
 
 video {
@@ -7,15 +8,13 @@ video {
   height: 100vh;
   top: 0;
   left: 0; */
-  position: absolute;
+  
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: center;
-  object-position: center;
 }
 
 h1 {
