--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,17 @@
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
 }
+
+.background {
+  position: fixed; 
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(1, 175, 255);
+  background-color: linear-gradient(
+    162deg,
+    rgba(1, 175, 255, 1) 0%,
+    rgba(143, 1, 255, 1) 80%
+  );
+}
