--- a/src/components/Nav/Navbar.css
+++ b/src/components/Nav/Navbar.css
@@ -1,4 +1,4 @@
-.nav-container {
+/* .nav-container {
   z-index: 10;
   position: relative;
 }
@@ -152,4 +152,4 @@
   button {
     display: none;
   }
-}
+} */
