--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
+
+/* html {
+  height: 100%;
+} */
+body {
+  background-color: black;
+  /* background-color: #222222; */
+  /* background: linear-gradient(
+      20deg,
+      rgba(243, 144, 79, 1) 0%,
+      rgba(188, 121, 89, 1) 30%,
+      rgba(128, 96, 100, 1) 50%,
+      rgba(80, 76, 109, 1) 80%,
+      rgba(59, 67, 113, 1) 100%
+    )
+    fixed; */
+    /* background: url('./assets//unsplash2.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; */
+}
