--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,97 +1,3 @@
-.portfolio-container {
-  margin-top: 10em;
-}
-
-.header-text {
-  padding-left: 4em;
-  padding-right: 4em;
-  color: hsl(0, 0%, 100%);
-}
-
-.product-header {
-  font-size: 24px;
-}
-
-.m-top {
-  margin-top: 2em;
-}
-
-.m-bottom {
-  margin-bottom: 6em;
-}
-
-.portfolio-introduction {
+.test {
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media screen and (max-width: 768px) {
-  .header-text {
-    padding-left: 2em;
-    padding-right: 2em;
-  }
-}
-
-.divider {
-  margin-top: .5em;
-  border-top: 2px solid white; 
-}
-
-.img-wrapper {
-  margin-top: 1em;
-  padding-left: 4em;
-  padding-right: 4em;
-}
-
-@media screen and (max-width: 768px) {
-  .img-wrapper {
-    padding-left: 2em;
-    padding-right: 2em;
-  }
-}
-
-.port-pic {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.video-player {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(0, 0, 0, 1);
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: fixed;
-  z-index: 1000;
-}
-
-.video-player #video-player {
-  height: 0;
-  padding: 0 0 45%;
-  position: relative;
-  width: 80%;
-}
-
-.video-player #video-player iframe {
-  height: 100%;
-  position: absolute;
-  width: 100%;
-}
-
-.isVisible {
-  opacity: 1;
-  visibility: visible;
-}
-
-.close {
-  z-index: 1000;
-  cursor: pointer;
-  position: relative;
-  float: right;
-  left: 40px;
 }
